# DMLSer

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Main.cpp  README.md  vcpkg-configuration.json  vcpkg.json
Core/: BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  ClipperUtils.cpp  ClipperUtils.hpp  ConditionalGcode.cpp  ConditionalGcode.hpp  Config.cpp  Config.hpp  ExPolygon.cpp  ExPolygon.hpp  ExPolygonCollection.cpp  ExPolygonCollection.hpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  ExtrusionEntityCollection.cpp  ExtrusionEntityCollection.hpp  Flow.cpp  Flow.hpp  Geometry.cpp  Geometry.hpp  IO.cpp  IO.hpp  Layer.cpp  Layer.hpp  LayerHeightSpline.cpp  LayerHeightSpline.hpp  LayerRegion.cpp  LayerRegionFill.cpp  Line.cpp  Line.hpp  Model.cpp  Model.hpp  MultiPoint.cpp  MultiPoint.hpp  PerimeterGenerator.cpp  PerimeterGenerator.hpp  (+35 more)
Core/Fill/: DMLSGrids.cpp  DMLSGrids.hpp  Fill.cpp  Fill.hpp  Fill3DHoneycomb.cpp  Fill3DHoneycomb.hpp  FillConcentric.cpp  FillConcentric.hpp  FillHoneycomb.cpp  FillHoneycomb.hpp  FillPlanePath.cpp  FillPlanePath.hpp  FillRectilinear.cpp  FillRectilinear.hpp  FillSLMisland.cpp  FillSLMisland.hpp  SLMSlicer.cpp  SLMSlicer.hpp
Core/IO/: AMF.cpp  TMF.cpp  TMF.hpp
Core/Zip/: ZipArchive.cpp  ZipArchive.hpp
DMLSer/: README.md
Utilities/: xsinit.h
Utilities/BSpline/: BSpline.cpp  BSpline.h  BandedMatrix.h  COPYRIGHT
Utilities/admesh/: connect.c  normals.c  portable_endian.h  shared.c  stl.h  stl_io.c  stlinit.c  util.c
Utilities/expat/: README  expat_config.h  expat_external.h  xmlparse.c  xmlrole.c  xmltok.c
Utilities/exprtk/: exprtk.hpp
Utilities/poly2tri/common/: shapes.cc  shapes.h  utils.h
Utilities/poly2tri/sweep/: sweep.cc
